--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <main>
     <header>
         <div class="hero">
-            <h4 class="sub-title">Happy New Year</h4>
-            <h1 class="title">New Year Party <br>Celebration </h1>
+            <h4 class="sub-title">Happy New Year!</h4>
+            <h1 class="title">New Year Party <br>Celebration !</h1>
         </div>
      </header>
      <!-- header area end -->
@@ -29,8 +29,8 @@
 
       <section class="welcome">
         <div class="welcome-container">
-            <h2>Welcome to midnight party</h2>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <h2>Welcome to midnight party!</h2>
+            <p>A great party is one of the most memorable experiences you can have, and every good party provides some outstanding party photos.Time to dance on the table.</p>
             <a href="#">Join Now</a>
         </div>
         <div class="image">
@@ -54,14 +54,14 @@
             <div class="contnet">
                 <h5 class="offer-title">NEW BEST OFFER</h5>
                 <h2>Coming Soon</h2>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p>Our deals are always on, but we've gone the extra mile by picking out a few of our best. No need to thank us. We've done the hard part by finding you the best prices.</p>
             </div>
             <div class="image">
                 <img src="images/Ellipse 1.png" alt="">
             </div>
             <div class="year">
                 <h1>2024</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <p>Shop huge price cuts across all categories.Shop holiday deals on home goods, tech and more.</p>
                 <img src="images/Group 96.png" alt="">
             </div>
         </section>
@@ -69,8 +69,7 @@
             <div class="content">
                 <h4>WHAT IS FUNCTIONAL</h4>
                 <h1><span>Holidays</span> Sale 50%</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
-                molestie malesuada. Ipsum sed sodales risus utpellentesque vel euismod. Eleifend nunc purusquam id fermentum amet amet sit consectetur.</p>
+                <p>Sales? Yeah, we've heard of 'em - through the grapevine. Where sky-high prices are discounted to something sort of reasonable for a weekend. We're just not about that life. What we are about, though, is cracking good deals and cheap holidays all year round. So when it comes to browsing our 2024 holidays and looking to get your summer holidays in the bag, you can forget hunting down discount codes and sifting through emails for that 1% off deal. We've got the goods (sun, sea, Fanta Lemon) always for a great price, especially on our Tenerife holidays and all-inclusive Turkey deals. A sale? Pffsh. Please. We're too cool for that.</p>
             </div>
             <div class="discount-image">
                 <div class="left-image">
@@ -86,7 +85,7 @@
             <div class="contet">
                 <h4 class="offer-title">THE BEST GIFTS</h4>
                 <h2>Our Awesome Portfolio</h2>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p>Walmart is one of our go-to places to shop and right now you can enjoy holiday markdowns on some of the best deals on home essentials, kitchen gadgets, iPads, Macbooks, laptops, style, beauty and toys. If you're looking to save ahead of the holidays they have an entire section dedicated to rollbacks on toys, including LEGO blocks, playsets, board games and more. If you sign up for Walmart+ you can get exclusive access to discounts and other member benefits.  </p>
             </div>
             <div class="images">
                 <div class="image-1">
@@ -115,7 +114,7 @@
         <section class="newsletter">
             <img src="images/Group 61.png" alt="">
             <h1>Subscribe Newsletter</h1>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p>Whether you're shopping for yourself or looking for impressive holiday gifts,Walmart is the perfect place to save. Enjoy end-of-year savings on smart tech, Amazon devices, home goods, fashion, kitchen essentials and so much more. Our top pick has to be the Ninja Speedi Air Fryer—our top-rated air fryer—marked down to the lowest price we've ever seen.</p>
             <div class="input">
                 <input  class="email" type="email" placeholder="type your email"><input type="submit" value="Subscribe" class="btn submit">
             </div>
@@ -131,7 +130,7 @@
                 </div>
                 <div class="number">
                     <h5><img src="icons/Call.png" alt="">+00 123 584 124</h5>
-                    <h5><img src="icons/Website.png" alt="">www.Newyearoffer.com</h5>
+                    <h5><img src="icons/Website.png" alt="">https://www.walmart.com/</h5>
                 </div>
             </div>
             <hr>
